--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
 }
-
+.Ap {
+  background-color: black;
+  color: white;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
