--- a/src/components/LaunchDetails/style.css
+++ b/src/components/LaunchDetails/style.css
@@ -1,2 +1,57 @@
 .LaunchDetail {
+  margin-left: 25px;
+  margin-right: 25px;
+  background-color: black;
+  padding-bottom: 25px;
+  margin-top: -25px;
+  margin-bottom: -25px;
+  height: 130vh;
+}
+
+@media only screen and (max-width: 600px) {
+  .LaunchDetail {
+    background-color: black;
+  }
+}
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #00478a; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+.parentLoader {
+  background-color: black;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.imgLogo {
+  height: 30vh;
+  width: 500px;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+@media only screen and (max-width: 600px) {
+  .imgLogo {
+    height: 30vh;
+    width: 200px;
+    margin-left: 20%;
+    margin-right: 20%;
+  }
 }
